testsuite/tests/typecheck/should_fail/T11313.stderr

T11313.hs:7:11: error:
    • Expected kind ‘* -> *’, but ‘Type’ has kind ‘*’
    • In the type ‘Type’
      In the expression: fmap @Type
      In an equation for ‘x’: x = fmap @Type
